# vit-mental-rotation

./: README.md  experiment.py  extract_embeddings.py
data_generation/: generate_shapes.py  text_generation.ipynb
medium_article/: medium_article.ipynb  pyproject.toml
plots/: plot_results_figure_3.py  plot_results_figure_4.py
results_avg_1/: blocks2_0_clip_base_siamese_results.npy  blocks2_0_clip_huge_siamese_results.npy  blocks2_0_clip_large_siamese_results.npy  blocks2_0_dinov2_base_siamese_results.npy  blocks2_0_dinov2_huge_siamese_results.npy  blocks2_0_dinov2_large_siamese_results.npy  blocks2_0_dinov3_base_siamese_results.npy  blocks2_0_dinov3_huge_siamese_results.npy  blocks2_0_dinov3_large_siamese_results.npy  blocks2_0_vit_base_siamese_results.npy  blocks2_0_vit_huge_siamese_results.npy  blocks2_0_vit_large_siamese_results.npy  blocks2_0_vitmae_base_siamese_results.npy  blocks2_0_vitmae_huge_siamese_results.npy  blocks2_0_vitmae_large_siamese_results.npy  blocks2_10_clip_base_siamese_results.npy  blocks2_10_clip_huge_siamese_results.npy  blocks2_10_clip_large_siamese_results.npy  blocks2_10_dinov2_base_siamese_results.npy  blocks2_10_dinov2_huge_siamese_results.npy  blocks2_10_dinov2_large_siamese_results.npy  blocks2_10_dinov3_base_siamese_results.npy  blocks2_10_dinov3_huge_siamese_results.npy  blocks2_10_dinov3_large_siamese_results.npy  blocks2_10_vit_base_siamese_results.npy  blocks2_10_vit_huge_siamese_results.npy  blocks2_10_vit_large_siamese_results.npy  blocks2_10_vitmae_base_siamese_results.npy  blocks2_10_vitmae_huge_siamese_results.npy  (+151 more)
(+361 files in other folders)
