[project]
name = "mental-rotation-pca-tutorial"
version = "0.1.0"
description = "Tutorial: Visualizing rotation in transformer embedding space"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "pillow",
    "tqdm",
    "ipykernel",
]
